welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:6: error: Unit does not take parameters
marquerSol();
          ^PictureMono:10: error: Unit does not take parameters
marquerSol();
          ^PictureMono:14: error: Unit does not take parameters
marquerSol();
          ^PictureMono:19: error: not found: value faireV
	faireV();
        ^